# weatherbot

./: .gitignore  .safety-project.ini  MANIFEST.in  Makefile  README.md  env.example  pre-commit-config.yaml  pyproject.toml  pyrightconfig.json  setup.cfg
.github/workflows/: ci.yml
docs/: README.md  ai-integration.md  alerts.md  api-reference.md  commands.md  configuration.md  development.md  index.md  installation.md  security.md  troubleshooting.md  user-guide.md
reports/: hurricane_threat_analysis_20250927_142215.html  hurricane_threat_analysis_20250927_211053.html  hurricane_threat_analysis_20250927_211252.html  hurricane_threat_analysis_20250927_211427.html  hurricane_threat_analysis_20250927_220402.html  hurricane_threat_analysis_20250927_220412.html  hurricane_threat_analysis_20250927_220417.html  hurricane_threat_analysis_20250928_001022.html  hurricane_threat_analysis_20250928_001242.html  hurricane_threat_analysis_20250928_001450.html  hurricane_threat_analysis_20250928_003302.html  hurricane_threat_analysis_20250928_111934.html  hurricane_threat_analysis_20250928_115602.html  hurricane_threat_analysis_20250928_120655.html  hurricane_threat_analysis_20250928_120933.html  hurricane_threat_analysis_20250928_122504.html  hurricane_threat_analysis_20250928_124141.html  hurricane_threat_analysis_20250928_125827.html  hurricane_threat_analysis_20250928_132145.html  hurricane_threat_analysis_20250928_135335.html  hurricane_threat_analysis_20250928_142249.html
scripts/: activate_env.ps1  install_dev.ps1  register_task.ps1  run_once.ps1
src/weatherbot/: ai_enhancer.py  ai_map_analyzer.py  ai_web_search.py  alert_levels.py  alerting.py  atcf_client.py  cache.py  cli.py  config.py  coverage_validator.py  enhanced_cone_analyzer.py  geometry.py  logging_setup.py  nhc.py  nhc_current_storms.py  nhc_storm_tracker.py  nws.py  reports.py  state.py
src/weatherbot/notifiers/: toast.py  weather_map.py
tests/: test_ai_enhancer.py  test_ai_map_analyzer.py  test_ai_web_search.py  test_alert_levels.py  test_alerting.py  test_atcf_client_comprehensive.py  test_cache.py  test_cli_comprehensive.py  test_config.py  test_coverage_validator.py  test_geometry.py  test_main.py  test_nhc_comprehensive.py  test_notifiers_comprehensive.py  test_nws.py  test_reports.py  test_smoke.py  test_state.py
