[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "weatherbot"
version = "1.0.0"
description = "Local hurricane alert system with NHC cone tracking and NWS alerts"
authors = [{name = "Weather Alert System", email = "alerts@example.com"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Communications",
    "Topic :: Scientific/Engineering :: Atmospheric Science",
]
keywords = ["weather", "hurricane", "alerts", "notifications", "NHC", "NWS", "weatherbot"]

dependencies = [
    "typer>=0.9.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "requests>=2.31.0",
    "shapely>=2.0.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.2.0",
    "win11toast>=0.34",
    "rich>=13.0.0",
    "folium>=0.15.0",
    "pillow>=10.0.0",
    "matplotlib>=3.7.0",
    "tkintermapview>=1.29",
    "openai>=1.0.0",
    "pandas>=2.0.0",
    "beautifulsoup4>=4.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "pre-commit>=3.4.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "safety>=2.0.0",
]

[project.scripts]
weatherbot = "weatherbot.cli:app"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
weatherbot = ["data/*", "icons/*"]

[tool.black]
line-length = 80
target-version = ['py311']

[tool.ruff]
line-length = 80
target-version = "py311"
select = ["E", "F", "W", "I", "N", "UP", "S", "B", "A", "C4", "ICN", "PIE", "T20", "RET", "SIM", "ARG", "PTH", "PL", "RUF"]
ignore = ["S101", "PLR0913", "PLR2004"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--verbose",
]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks tests as integration tests",
]

[tool.bandit]
exclude_dirs = ["tests", "build", "dist"]
skips = ["B101", "B601"]  # Skip assert_used and shell_injection_subprocess
